--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+*/*/DS_Store
+src/htps/*DS_Store
+src/htps/*csv
+src/htps/*tsv
+src/htps/*txt
+src/htps/*pdf
+src/htps/*fasta
